graylog2/logging.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "logging"
  labels:
    app: "logging"
