graylog2/graylog-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: logging
  name: graylog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: graylog
        tier: graylog
        role: master
    spec:
      containers:
      - image: graylog2/server:2.2.3-1
        name: graylog
        ports:
        - name: web-interface
          containerPort: 9000
        - name: gelf-tcp
          containerPort: 12201
        - name: syslog-udp
          containerPort: 514
          protocol: UDP
        volumeMounts:
        - name: graylog-config-persistent-storage
          mountPath: /usr/share/graylog/data/config
        - name: graylog-journal-persistent-storage
          mountPath: /usr/share/graylog/data/journal
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "3Gi"
      volumes:
      - name: graylog-config-persistent-storage
        persistentVolumeClaim:
          claimName: graylog-config-pv-claim
      - name: graylog-journal-persistent-storage
        persistentVolumeClaim:
          claimName: graylog-journal-pv-claim
