graylog2/graylog.slave.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: logging
  name: graylog2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: logging
        role: slave
        app: graylog
    spec:
      containers:
      - image: graylog2/server:2.2.3-1
        name: graylog2
        resources:
          requests:
            cpu: "500m"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "4Gi"
        ports:
        - name: rest
          containerPort: 9000
          protocol: TCP
        - name: syslog
          containerPort: 10514
          protocol: UDP
        - name: foremann
          containerPort: 10515
          protocol: UDP
        - name: haproxy
          containerPort: 10516
          protocol: UDP
        - name: hosts
          containerPort: 10517
          protocol: UDP
        - name: logspout
          containerPort: 2514
          protocol: TCP
        - name: rfc3164
          containerPort: 3514
          protocol: TCP
        - name: rfc5424
          containerPort: 5514
          protocol: TCP
        volumeMounts:
        - name: graylog-config
          mountPath: /usr/share/graylog/data/config
        - name: graylog-journal
          mountPath: /usr/share/graylog/data/journal
      volumes:
      - name: graylog-config
        configMap:
          name: graylog-conf
      - name: graylog-journal
        emptyDir: {}
