graylog2/mongo-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: logging
  name: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: graylog
        tier: mongo
        role: master
    spec:
      restartPolicy: Always
      containers:
      - name: mongo
        image: mongo:3
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
      restartPolicy: Always
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-pv-claim
