graylog2/graylog.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog
  namespace: logging
  labels:
    app: graylog
    tier: graylog
spec:
  type: LoadBalancer
  ports:
  - name: web-interface
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: graylog
    tier: graylog
    role: master
