graylog2/graylog.tcp.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-tcp
  namespace: logging
  labels:
    app: graylog
    tier: graylog
    input: tcp
spec:
  type: LoadBalancer
  ports:
  - name: syslog-tcp
    port: 514
    protocol: TCP
    targetPort: 514
  - name: syslog-rfc3164-tcp
    port: 3514
    protocol: TCP
    targetPort: 3514
  - name: syslog-rfc5424-tcp
    port: 5514
    protocol: TCP
    targetPort: 5514
  - name: syslog-generic-tcp
    port: 5140
    protocol: TCP
    targetPort: 5140
  selector:
    app: graylog
    tier: graylog
    role: master
