graylog2/graylog.udp.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-udp
  namespace: logging
  labels:
    component: logging
    input: udp
    app: graylog
spec:
  type: LoadBalancer
  ports:
  - name: syslog
    port: 10514
    protocol: UDP
    targetPort: 10514
  - name: foremann
    port: 10515
    protocol: UDP
    targetPort: 10515
  - name: haproxy
    port: 10516
    protocol: UDP
    targetPort: 10516
  - name: hosts
    port: 10517
    protocol: UDP
    targetPort: 10517
  selector:
    component: logging
    app: graylog
