graylog2/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: logging
  labels:
    app: graylog
    tier: mongo
spec:
  type: LoadBalancer
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    component: logging
    role: master
    app: mongo
